# dada

./: .gitignore  .nvmrc  .typos.toml  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE-MIT  README.md  dada.code-workspace  justfile  package-lock.json  rust-toolchain  walkthrough.md  x
components/dada-brew/: Cargo.toml
components/dada-brew/src/: brew.rs  brewery.rs  cursor.rs  lib.rs  liveness.rs  prelude.rs  scope.rs
components/dada-check/: Cargo.toml
components/dada-check/docs/: overview.md
components/dada-check/src/: check.rs  lib.rs
components/dada-codegen/: Cargo.toml
components/dada-codegen/src/: cx.rs  lib.rs
components/dada-codegen/src/cx/: generate_expr.rs  generate_fn.rs  wasm_fn_type.rs  wasm_repr.rs
components/dada-compiler/: Cargo.toml
components/dada-compiler/src/: fork.rs  lib.rs  realfs.rs  vfs.rs
components/dada-db/: Cargo.toml
components/dada-db/src/: lib.rs
components/dada-debug/: Cargo.toml
components/dada-debug/assets/: README.md  highlight.min.js  jsontree.css  jsontree.js  makejsontree.js
components/dada-debug/src/: assets.rs  error.rs  events.rs  hbs.rs  lib.rs  root.rs  server.rs  source.rs  view.rs  watch.rs
components/dada-debug/templates/: header.hbs  index.hbs  log.hbs  render_event.hbs  render_nested_event.hbs  source.hbs  task_children.hbs
components/dada-error-format/: Cargo.toml
components/dada-error-format/src/: format.rs  lib.rs
components/dada-execute/: Cargo.toml
components/dada-execute/src/: data.rs  error.rs  execute.rs  ext.rs  heap_graph.rs  interpreter.rs  intrinsic.rs  kernel.rs  lib.rs  machine.rs  macros.rs  moment.rs  permission.rs  poll_once.rs  run.rs  step.rs  thunk.rs  value.rs
components/dada-execute/src/heap_graph/: capture.rs  graphviz.rs
components/dada-execute/src/machine/: assert_invariants.rs  op.rs  stringify.rs
components/dada-execute/src/permission/: invalidated.rs  leased.rs  my.rs  our.rs  shared.rs  tenant.rs
components/dada-execute/src/step/: access.rs  address.rs  apply_op.rs  apply_unary.rs  assert_invariants.rs  await_thunk.rs  call.rs  check_signature.rs  concatenate.rs  gc.rs  give.rs  into_shared.rs  intrinsic.rs  lease.rs  reserve.rs  revoke.rs  share.rs  shlease.rs  tenant.rs  traversal.rs
components/dada-ir/: Cargo.toml
components/dada-ir-ast/: Cargo.toml
components/dada-ir-ast/src/: ast.rs  diagnostic.rs  inputs.rs  lib.rs  parse.rs  span.rs
components/dada-ir-ast/src/ast/: class_item.rs  expr.rs  function.rs  member.rs  types.rs  use_item.rs  util.rs
components/dada-ir-ast/src/diagnostic/: render.rs
components/dada-ir-ast/src/parse/: class_body.rs  generics.rs  miscellaneous.rs  module_body.rs  tokenizer.rs  types.rs
components/dada-ir-sym/: Cargo.toml
components/dada-ir-sym/docs/: constraint_system_deep_dive.md  overview.md  permission_system.md  subtyping.md  type_checking.md  type_inference.md  type_inference_discussion_notes.md
components/dada-ir-sym/src/: binder.rs  blocks.rs  bound.rs  check.rs  class.rs  env.rs  expr.rs  exprs.rs  function.rs  indices.rs  inference.rs  ir.rs  lib.rs  member.rs  misc_tys.rs  module.rs  object_ir.rs  populate.rs  primitive.rs  scope.rs  scope_tree.rs  signature.rs  statements.rs  subobject.rs  subst.rs  symbol.rs  symbolize.rs  ty.rs  types.rs  well_known.rs
components/dada-ir-sym/src/check/: alternatives.rs  blocks.rs  bound.rs  bounds.rs  chains.rs  combinator.rs  debug.rs  env.rs  exprs.rs  fields.rs  functions.rs  generics.rs  inference.rs  live_places.rs  member_lookup.rs  modules.rs  places.rs  predicates.rs  red.rs  report.rs  resolve.rs  resolve_expr.rs  runtime.rs  scope.rs  scope_tree.rs  signature.rs  statements.rs  stream.rs  subobject.rs  subst_impls.rs  subtype.rs  to_red.rs  (+5 more)
components/dada-ir-sym/templates/: render_event.hbs
components/dada-ir/src/: bir.rs  class.rs  code.rs  diagnostic.rs  effect.rs  filename.rs  format_string.rs  func.rs  function.rs  in_ir_db.rs  input_file.rs  intrinsic.rs  item.rs  kw.rs  lib.rs  lines.rs  manifest.rs  op.rs  origin_table.rs  parameter.rs  prelude.rs  return_type.rs  signature.rs  source_file.rs  span.rs  span_table.rs  storage.rs  storage_mode.rs  token.rs  token_tree.rs  ty.rs  word.rs
components/dada-lang/: Cargo.toml
components/dada-lang/docs/: overview.md
components/dada-lang/src/: check.rs  compiler.rs  db.rs  error_reporting.rs  format.rs  lib.rs  main_lib.rs  repl.rs  run.rs  test_harness.rs
components/dada-lex/: Cargo.toml
components/dada-lex/src/: kw.rs  lex.rs  lib.rs  lines.rs  prelude.rs  span.rs  token.rs  token_tree.rs
components/dada-lsp/: Cargo.toml
components/dada-lsp-server/: Cargo.toml
components/dada-lsp-server/src/: lsp.rs  main.rs
components/dada-lsp/src/: db.rs  lib.rs
components/dada-mdbook-preprocessor/: Cargo.toml
components/dada-mdbook-preprocessor/src/: main.rs
components/dada-parse/: Cargo.toml
components/dada-parse/src/: code_parser.rs  file_parser.rs  lib.rs  parameter_parser.rs  parse.rs  parser.rs  prelude.rs  token_test.rs  tokens.rs
components/dada-probe/: Cargo.toml
components/dada-probe/src/: lib.rs
components/dada-repl/: Cargo.toml
components/dada-repl/src/: eval.rs  help.rs  lib.rs  loader.rs  read.rs
components/dada-type-check/: Cargo.toml
components/dada-type-check/src/: blocks.rs  bound.rs  check.rs  checking_ir.rs  env.rs  executor.rs  exprs.rs  inference.rs  ir.rs  lib.rs  member.rs  object_ir.rs  statements.rs
components/dada-util/: Cargo.toml
components/dada-util/src/: arena.rs  fixed_depth_json.rs  fixed_depth_json_README.md  lib.rs  log.rs  typedvec.rs  vecext.rs  vecset.rs
components/dada-validate/: Cargo.toml
components/dada-validate/src/: lib.rs  name_lookup.rs  prelude.rs  signature.rs  validate.rs
components/dada-web/: Cargo.toml  code.webpack.js  index.css  index.html  index.js
components/dada-web/ace/: Makefile
components/dada-web/src/: diagnostics.rs  lib.rs  range.rs
components/salsa/: Cargo.toml
components/salsa/src/: lib.rs
components/xtask/: Cargo.toml
components/xtask/src/: build.rs  deploy.rs  main.rs  rfc.rs
(+1797 files in other folders)
