[workspace]
members = [".", "components/*"]

# Exclude xtask so it isn't installed with `cargo install`
default-members = [
  ".",
  "components/dada-*",
]

[package]
name = "dada"
version = "0.1.0"
edition = "2021"
default-run = "dada"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[test]]
name = "harness"
harness = false

[dependencies]
backtrace-on-stack-overflow = "0.3.0"
dada-lang = { path = "components/dada-lang" }
dada-util = { version = "0.1.0", path = "components/dada-util" }
structopt = "0.3.26"
thiserror = "1.0.63"
tokio = { version = "1.38.0", features = ["full"] }
