[workspace]
members = [".", "components/dada-*", "components/xtask"]
default-members = [ # Exclude xtask so it isn't installed with `cargo install`
  ".",
  "components/dada-*",
]

[workspace.package]
version = "0.1.0"
repository = "https://github.com/dada-lang"
edition = "2024"

[workspace.dependencies]
salsa = { git = "https://github.com/salsa-rs/salsa.git" }
anyhow = "1.0.93"
url = "2.5.3"
annotate-snippets = "0.11.4"
wasm-encoder = "0.220.0"

[workspace.lints.clippy]
needless_lifetimes = "allow"

[package]
name = "dada"
version.workspace = true
edition.workspace = true
repository.workspace = true
default-run = "dada"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[test]]
name = "harness"
harness = false

[dependencies]
dada-lang = { path = "components/dada-lang" }
dada-util = { version = "0.1.0", path = "components/dada-util" }
structopt = "0.3.26"
thiserror = "1.0.63"
tokio = { version = "1.38.0", features = ["macros","rt"] }
