[package]
name = "dada-brew"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dada-ir = { path = "../dada-ir" }
dada-validate = { path = "../dada-validate" }
dada-parse = { path = "../dada-parse" }
salsa = { path = "../salsa" }