[package]
name = "dada-check"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dada-brew = { path = "../dada-brew" }
dada-ir = { path = "../dada-ir" }
dada-lex = { path = "../dada-lex" }
dada-parse = { path = "../dada-parse" }
dada-validate = { path = "../dada-validate" }
salsa = { path = "../salsa" }
