[package]
name = "dada-codegen"
version = "0.1.0"
edition = "2021"

[dependencies]
dada-ir-sym = { version = "0.1.0", path = "../dada-ir-sym" }
dada-object-check = { version = "0.1.0", path = "../dada-object-check" }
wasm-encoder = "0.220.0"
salsa = { workspace = true }
dada-util = { version = "0.1.0", path = "../dada-util" }
dada-ir-ast = { version = "0.1.0", path = "../dada-ir-ast" }
