[package]
name = "dada-compiler"
version = "0.1.0"
edition = "2021"

[dependencies]
dada-check = { version = "0.1.0", path = "../dada-check" }
dada-ir-ast = { version = "0.1.0", path = "../dada-ir-ast" }
dada-parser = { version = "0.1.0", path = "../dada-parser" }
dada-util = { version = "0.1.0", path = "../dada-util" }
salsa = { git = "https://github.com/salsa-rs/salsa.git" }
rust-embed = "8.5.0"
