[package]
name = "dada-compiler"
version = "0.1.0"
edition = "2021"

[dependencies]
dada-check = { version = "0.1.0", path = "../dada-check" }
dada-ir-ast = { version = "0.1.0", path = "../dada-ir-ast" }
dada-parser = { version = "0.1.0", path = "../dada-parser" }
dada-util = { version = "0.1.0", path = "../dada-util" }
salsa = { workspace = true }
rust-embed = "8.5.0"
extension-trait = "1.0.2"
url = { workspace = true }
dada-codegen = { version = "0.1.0", path = "../dada-codegen" }
dada-ir-sym = { version = "0.1.0", path = "../dada-ir-sym" }
