[package]
name = "dada-db"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
salsa = { path = "../salsa" }
dada-brew = { path = "../dada-brew" }
dada-error-format = { path = "../dada-error-format" }
dada-execute = { path = "../dada-execute" }
dada-ir = { path = "../dada-ir" }
dada-lex = { path = "../dada-lex" }
dada-parse = { path = "../dada-parse" }
dada-check = { path = "../dada-check" }
dada-validate = { path = "../dada-validate" }