[package]
name = "dada-error-format"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ariadne = "0.1.3"
dada-collections = { path = "../dada-collections" }
dada-ir = { path = "../dada-ir" }
eyre = "0.6.5"
salsa = { path = "../salsa" }
