[package]
name = "dada-execute"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arc-swap = "1.5.1"
async-trait = "0.1.57"
crossbeam = "0.8.2"
dada-breakpoint = { path = "../dada-breakpoint" }
dada-brew = { path = "../dada-brew" }
dada-collections = { path = "../dada-collections" }
dada-error-format = { path = "../dada-error-format" }
dada-id = { path = "../dada-id" }
dada-ir = { path = "../dada-ir" }
dada-parse = { path = "../dada-parse" }
eyre = "0.6.8"
extension-trait = "1.0.1"
generational-arena = "0.2.8"
html-escape = "0.2.11"
salsa = { path = "../salsa" }
parking_lot = "0.12.1"
thiserror = "1"
tracing = "0.1"
typed-arena = "2.0.1"
