[package]
name = "dada-ir-ast"
version.workspace = true
edition.workspace = true

[dependencies]
annotate-snippets = { workspace = true }
dada-util = { version = "0.1.0", path = "../dada-util" }
salsa = { workspace = true }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
url = { workspace = true, features = ["serde"] }
