[package]
name = "dada-ir-sym"
version.workspace = true
edition.workspace = true

[lints.clippy]
needless_lifetimes = "allow"
too_many_arguments = "allow"

[lib]
doctest = false

[dependencies]
dada-ir-ast = { version = "0.1.0", path = "../dada-ir-ast" }
dada-parser = { version = "0.1.0", path = "../dada-parser" }
dada-util = { version = "0.1.0", path = "../dada-util" }
either = "1.13.0"
erased-serde = "0.4.6"
futures = "0.3.31"
itertools = "0.14.0"
ordered-float = { version = "4.5.0", features = ["serde"] }
salsa = { workspace = true }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
