[package]
name = "dada-ir"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eq-float = "=0.1.0"
salsa = { path = "../salsa" }
dada-id = { path = "../dada-id" }
dada-collections = { path = "../dada-collections" }
tracing = "0.1.29"