[package]
name = "dada-lang"
version.workspace = true
edition.workspace = true

[lib]
doctest = false

[dependencies]
annotate-snippets = { workspace = true }
dada-check = { version = "0.1.0", path = "../dada-check" }
dada-compiler = { version = "0.1.0", path = "../dada-compiler" }
dada-debug = { version = "0.1.0", path = "../dada-debug" }
dada-ir-ast = { version = "0.1.0", path = "../dada-ir-ast" }
dada-parser = { version = "0.1.0", path = "../dada-parser" }
dada-util = { version = "0.1.0", path = "../dada-util" }
indicatif = "0.17.8"
lazy_static = "1.5.0"
prettydiff = "0.7.0"
rayon = "1.10.0"
regex = "1.10.6"
salsa = { workspace = true }
structopt = "0.3.26" # derive doesn't work without this
thiserror = "1.0.63"
url = "2.5.3"
walkdir = "2.5.0"
