[package]
name = "dada-lex"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
peg = "0.7.0"
salsa = { path = "../salsa" }
im = "15"
dada-manifest = { path = "../dada-manifest" }
dada-ast = { path = "../dada-ast" }