[package]
name = "dada-lex"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
salsa = { path = "../salsa" }
im = "15"
dada-manifest = { path = "../dada-manifest" }
dada-ir = { path = "../dada-ir" }
dada-collections = { path = "../dada-collections" }