[package]
name = "dada-lsp-server"
version = "0.1.0"
edition = "2021"

[dependencies]
dada-compiler = { version = "0.1.0", path = "../dada-compiler" }
dada-lang = { version = "0.1.0", path = "../dada-lang" }
dada-util = { version = "0.1.0", path = "../dada-util" }
salsa = { git = "https://github.com/salsa-rs/salsa.git" }
lsp-server = "0.7.6"
lsp-types = "0.95.1"
walkdir = "2"
serde = "1.0.189"
serde_json = "1.0.107"
