[package]
name = "dada-lsp-server"
version.workspace = true
edition.workspace = true

[dependencies]
crossbeam-channel = "0.5.13"
dada-compiler = { version = "0.1.0", path = "../dada-compiler" }
dada-ir-ast = { version = "0.1.0", path = "../dada-ir-ast" }
dada-lang = { version = "0.1.0", path = "../dada-lang" }
dada-util = { version = "0.1.0", path = "../dada-util" }
futures = "0.3.31"
lsp-server = "0.7.7"
lsp-types = "0.97.0"
salsa = { workspace = true }
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.132"
url = "2.5.3"
