[package]
name = "dada-lsp"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lsp-server = "0.5.2"
lsp-types = "0.83.1"
eyre = "0.6.8"
serde_json = "1.0.83"
serde = "1.0.143"
threadpool = "1.8.1"
dada-collections = { path = "../dada-collections" }
dada-db = { path = "../dada-db" }
dada-ir = { path = "../dada-ir" }
dada-lex = { path = "../dada-lex" }
crossbeam-channel = "0.5.6"
salsa = { path = "../salsa" }
