[package]
name = "dada-mdbook-preprocessor"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "dada-mdbook-preprocessor"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
clap = { version = "4.0", features = ["derive"] }
dada-spec-common = { version = "0.1.0", path = "../dada-spec-common" }
mdbook-preprocessor = "0.5"
regex = "1.0"
serde_json = "1.0"
semver = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"