[package]
name = "dada-parse"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
salsa = { path = "../salsa" }
im = "15"
dada-lex = { path = "../dada-lex" }
dada-ir = { path = "../dada-ir" }
dada-id = { path = "../dada-id" }
stacker = "0.1.14"