[package]
name = "dada-probe"
version.workspace = true
repository.workspace = true
edition.workspace = true

[dependencies]
dada-ir-ast = { version = "0.1.0", path = "../dada-ir-ast" }
dada-ir-sym = { version = "0.1.0", path = "../dada-ir-sym" }
dada-parser = { version = "0.1.0", path = "../dada-parser" }
dada-util = { version = "0.1.0", path = "../dada-util" }
salsa = { workspace = true }
