[package]
name = "dada-repl"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.52"
dada-brew = { path = "../dada-brew" }
dada-collections = { path = "../dada-collections" }
dada-error-format = { path = "../dada-error-format" }
dada-execute = { path = "../dada-execute" }
dada-db = { path = "../dada-db" }
dada-ir = { path = "../dada-ir" }
dada-lex = { path = "../dada-lex" }
dada-parse = { path = "../dada-parse" }
eyre = "0.6.5"
salsa = { path = "../salsa" }
tokio = { version = "1" }
tracing = "0.1"
