[package]
name = "dada-type-check"
version = "0.1.0"
edition = "2021"

[dependencies]
dada-ir-ast = { version = "0.1.0", path = "../dada-ir-ast" }
dada-ir-sym = { version = "0.1.0", path = "../dada-ir-sym" }
dada-parser = { version = "0.1.0", path = "../dada-parser" }
dada-util = { version = "0.1.0", path = "../dada-util" }
salsa = { git = "https://github.com/salsa-rs/salsa.git" }
typed-arena = "2.0.2"
