[package]
name = "dada-validate"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dada-collections = { path = "../dada-collections" }
dada-id = { path = "../dada-id" }
dada-ir = { path = "../dada-ir" }
dada-parse = { path = "../dada-parse" }
salsa = { path = "../salsa" }
tracing = "0.1.29"
