[package]
name = "dada-validate"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dada-collections = { path = "../dada-collections" }
dada-id = { path = "../dada-id" }
dada-ir = { path = "../dada-ir" }
dada-lex = { path = "../dada-lex" }
dada-parse = { path = "../dada-parse" }
eq-float = "=0.1.0"
extension-trait = "1"
itertools = "0.10.3"
salsa = { path = "../salsa" }
tracing = "0.1.36"
