[package]
edition = "2021"
name = "dada-web"
version = "0.1.0"
[dependencies]
async-trait = "0.1.57"
console_error_panic_hook = "0.1.7"
dada-breakpoint = { path = "../dada-breakpoint" }
eyre = "0.6.8"
parking_lot = { version = "0.11.2", features = ["wasm-bindgen"] }
tracing = "0.1.36"
tracing-wasm = "0.2.1"
wasm-bindgen = "0.2.82"
wasm-bindgen-futures = "*"

[dependencies.dada-collections]
path = "../dada-collections"

[dependencies.dada-db]
path = "../dada-db"

[dependencies.dada-error-format]
path = "../dada-error-format"

[dependencies.dada-execute]
path = "../dada-execute"

[dependencies.dada-ir]
path = "../dada-ir"

[dependencies.dada-lex]
path = "../dada-lex"

[dependencies.dada-lsp]
path = "../dada-lsp"

[dependencies.salsa]
path = "../salsa"

[lib]
crate-type = ["cdylib"]
