[package]
name = "salsa"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
salsa-entity-mock = { git = "https://github.com/nikomatsakis/salsa/", branch = "entity" }
# salsa-entity-mock = { path = "../../../salsa/components/salsa-entity-mock" }
