[package]
name = "salsa"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
salsa-2022 = { git = "https://github.com/salsa-rs/salsa/", branch = "master" }
# salsa-2022 = { path = "../../../salsa/components/salsa-2022" }
