[package]
name = "xtask"
version.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "0.3"
tracing = "0.1.36"
tracing-tree = "0.2.1"
tracing-subscriber = { version = "0.3.15", default-features = false, features = ["fmt", "env-filter", "smallvec", "parking_lot", "ansi"] }
xshell = "0.1"
anyhow = { workspace = true }
